# sda-detector

./: .coverage  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  commit_message.txt  pyproject.toml
.claude/: claude.md  sda-rules-reference.md  validate-sda-work.md
src/: sda_detector.py
src/sda_detector/: __init__.py  __main__.py  config.py  models.py  protocols.py  service.py  services.py
src/sda_detector/models/: __init__.py  analysis_domain.py  classification_domain.py  context_domain.py  core_types.py  reporting_domain.py
src/sda_detector/models/analyzers/: __init__.py  ast_utils.py  attribute_analyzer.py  call_analyzer.py  conditional_analyzer.py  literal_analyzer.py
tests/: README.md
tests/domain/: test_analyzer_intelligence.py  test_context_intelligence.py  test_enum_behavior.py  test_finding_intelligence.py  test_literal_intelligence.py
tests/fixtures/mixed/: boundary_code.py  domain_code.py  redis_client.py
tests/fixtures/patterns/: protocols.py  rich_domain.py  type_dispatch.py
tests/fixtures/violations/: anemic_service.py  any_type.py  cast_usage.py  enum_unwrapping.py  isinstance_heavy.py  lazy_init.py  manual_json.py  match_case.py  string_literals.py
tests/integration/: test_mixed_fixtures.py  test_new_detections.py  test_pattern_detection.py  test_violation_detection.py
tests/shared/: test_models.py
